go-cd/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: route-gocd
  namespace: gocd
spec:
  parentRefs:
  - name: istio-gateway
    namespace: istio-system
  hostnames: ["gocd.audryus.arpa"]
  rules:
    - matches:
      - headers:
          - name: X-Forwarded-Proto
            value: http
      filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
          statusCode: 301
          port: 443
      backendRefs:
      - name: go-cd-gocd-server
        weight: 1
        port: 8153
    - backendRefs:
      - name: go-cd-gocd-server
        weight: 1
        port: 8153
